--- a/src/components/ui/ImgDiv.module.css
+++ b/src/components/ui/ImgDiv.module.css
@@ -15,6 +15,12 @@
 .cenq {
   margin-top: 9%;
 }
+.downloadButton {
+  margin: 5% 3% 5% 0;
+  color: #fff;
+  font-weight: 700;
+}
+
 
 /* Heading */
 .bigHeading {
